# 2D-Incompressible-Fluid-Simulation-Engine

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: solver_bench.rs
docs/: advanced_extensions.md
src/: app.rs  config.rs  lib.rs  main.rs
src/input/: mod.rs  mouse.rs
src/math/: interp.rs  mod.rs  operators.rs
src/render/: colormap.rs  gpu_view.rs  gpu_view.wgsl  mod.rs  view.rs
src/sim/: advection.rs  boundary.rs  diffusion.rs  effects.rs  field.rs  forces.rs  gpu.rs  gpu.wgsl  grid.rs  mod.rs  obstacles.rs  pressure.rs  runtime.rs  solver.rs  state.rs
src/util/: timer.rs
